syntax = "proto3";

option go_package = "./proto";

package proto;

service MyService {
    rpc MyMethod(MyRequest) returns (MyResponse) {}
}

message MyRequest {
    string name = 1;
}

message MyResponse {
    string message = 1;
}